--- a/2task/src/shared/components/Button/styles.scss
+++ b/2task/src/shared/components/Button/styles.scss
@@ -1,4 +1,5 @@
 button {
+  display: inline;
   cursor: pointer;
   font-family: 'Inter';
   font-style: normal;
@@ -10,6 +11,7 @@ button {
   background: #4077f3;
   color: #e4e5ea;
   padding: 21px 24px;
+  width: fit-content;
 }
 
 .secondary-button {
