--- a/2task/src/shared/components/GradientText/styles.scss
+++ b/2task/src/shared/components/GradientText/styles.scss
@@ -1,5 +1,5 @@
 .gradient-text {
-  background: linear-gradient(92deg, #fcb045 27.14%, #ff3f78 121.36%), #e4e5ea;
+  background: linear-gradient(0.25turn, #fcb045, #fd1d1d);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
