--- a/2task/src/components/Background/styles.scss
+++ b/2task/src/components/Background/styles.scss
@@ -77,3 +77,9 @@
   opacity: 0.5;
   filter: blur(196px);
 }
+
+@media screen and (min-width: 320px) and (max-width: 720px) {
+  .purple-light {
+    left: 10%;
+  }
+}
