--- a/2task/src/components/CenteredContent/styles.scss
+++ b/2task/src/components/CenteredContent/styles.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-top: 90px;
-	height: 100%;
+  height: 100%;
 
   section {
     display: flex;
@@ -81,5 +81,81 @@
 
   &__consutation-button {
     margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 720px) {
+  .content {
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+    padding: 40px 14px 60px 14px;
+    height: fit-content;
+
+    section {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+      article {
+        font-size: 36px;
+        line-height: 44px;
+      }
+    }
+
+    aside {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-left: 0;
+      margin-top: 45px;
+
+      article {
+        text-align: left;
+        max-width: auto;
+        margin-bottom: 20px;
+      }
+    }
+
+    &__styled-text {
+      font-size: 36px;
+      line-height: 44px;
+    }
+
+    &__advantages {
+      grid-gap: 10px 14px;
+
+      div {
+        p {
+          content: '';
+          font-family: 'Montserrat';
+          font-weight: 400;
+          font-size: 13px;
+          line-height: 16px;
+          text-align: left;
+          margin-left: 15px;
+
+          &::before {
+            content: '';
+            display: block;
+            position: absolute;
+            width: 10px;
+            height: 1px;
+            background: white;
+            margin-top: 8px;
+            margin-left: -15px;
+            background: linear-gradient(0.25turn, #fcb045, #fd1d1d);
+          }
+        }
+
+        span {
+          display: none;
+        }
+      }
+    }
+
+    &__consutation-button {
+      display: none;
+    }
   }
 }
