--- a/2task/src/pages/Main/styles.scss
+++ b/2task/src/pages/Main/styles.scss
@@ -1,9 +1,15 @@
 .main {
-	display: flex;
-	flex-direction: column;
-	padding: 57px 150px 20px;
-	width: 100vw;
-	height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 57px 150px 20px;
+  width: 100%;
+  height: 100vh;
   background: #0e1014;
-	color: #E4E5EA;
+  color: #e4e5ea;
+}
+
+@media screen and (min-width: 320px) and (max-width: 720px) {
+  .main {
+    padding: 0;
+  }
 }
